--- a/404.html
+++ b/404.html
@@ -10,16 +10,16 @@
     <meta name=keywords content>
     <meta name=description content="ExampleSite description">
     <meta name=author content="Caleb J. Gross">
-    <link rel=canonical href=/404.html>
+    <link rel=canonical href=https://lublubxt.github.io/tec-blog/404.html>
     <meta name=google-site-verification content="XYZabc">
     <meta name=yandex-verification content="XYZabc">
     <meta name=msvalidate.01 content="XYZabc">
-    <link rel="stylesheet" href="./assets/css/stylesheet.min.6f60056d44d3f7eb69a4bc6c332b59960f3a995802bded244750232f33713c49.css">
-    <link rel=icon href=%3Clink%20/%20abs%20url%3E>
-    <link rel=icon type=image/png sizes=16x16 href=%3Clink%20/%20abs%20url%3E>
-    <link rel=icon type=image/png sizes=32x32 href=%3Clink%20/%20abs%20url%3E>
-    <link rel=apple-touch-icon href=%3Clink%20/%20abs%20url%3E>
-    <link rel=mask-icon href=%3Clink%20/%20abs%20url%3E>
+    <link rel="stylesheet" href="./tec-blog/assets/css/stylesheet.min.6f60056d44d3f7eb69a4bc6c332b59960f3a995802bded244750232f33713c49.css">
+    <link rel=icon href=https://lublubxt.github.io/tec-blog/%3Clink%20/%20abs%20url%3E>
+    <link rel=icon type=image/png sizes=16x16 href=https://lublubxt.github.io/tec-blog/%3Clink%20/%20abs%20url%3E>
+    <link rel=icon type=image/png sizes=32x32 href=https://lublubxt.github.io/tec-blog/%3Clink%20/%20abs%20url%3E>
+    <link rel=apple-touch-icon href=https://lublubxt.github.io/tec-blog/%3Clink%20/%20abs%20url%3E>
+    <link rel=mask-icon href=https://lublubxt.github.io/tec-blog/%3Clink%20/%20abs%20url%3E>
     <meta name=theme-color content="#2e2e33">
     <meta name=msapplication-TileColor content="#2e2e33">
     <meta name=generator content="Hugo 0.89.2">
@@ -37,11 +37,11 @@
     <meta property="og:title" content="404 Page not found">
     <meta property="og:description" content="ExampleSite description">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="/404.html">
-    <meta property="og:image" content="%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
+    <meta property="og:url" content="https://lublubxt.github.io/tec-blog/404.html">
+    <meta property="og:image" content="https://lublubxt.github.io/tec-blog/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
     <meta property="og:site_name" content="Tec Blog">
     <meta name=twitter:card content="summary_large_image">
-    <meta name=twitter:image content="%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
+    <meta name=twitter:image content="https://lublubxt.github.io/tec-blog/%3Clink%20or%20path%20of%20image%20for%20opengraph,%20twitter-cards%3E">
     <meta name=twitter:title content="404 Page not found">
     <meta name=twitter:description content="ExampleSite description">
 </head>
@@ -53,7 +53,7 @@
     <header class=header>
         <nav class=nav>
             <div class=logo>
-                <a href accesskey=h title="Tec Blog (Alt + H)">Tec Blog</a>
+                <a href=https://lublubxt.github.io/tec-blog/ accesskey=h title="Tec Blog (Alt + H)">Tec Blog</a>
                 <span class=logo-switches>
 <button id=theme-toggle accesskey=t title="(Alt + T)"><svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"/></svg><svg id="sun" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentcolor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="5"/><line x1="12" y1="1" x2="12" y2="3"/><line x1="12" y1="21" x2="12" y2="23"/><line x1="4.22" y1="4.22" x2="5.64" y2="5.64"/><line x1="18.36" y1="18.36" x2="19.78" y2="19.78"/><line x1="1" y1="12" x2="3" y2="12"/><line x1="21" y1="12" x2="23" y2="12"/><line x1="4.22" y1="19.78" x2="5.64" y2="18.36"/><line x1="18.36" y1="5.64" x2="19.78" y2="4.22"/></svg>
 </button>
@@ -61,12 +61,12 @@
             </div>
             <ul id=menu>
                 <li>
-                    <a href=/tags/ title=Tags>
+                    <a href=https://lublubxt.github.io/tec-blog/tags/ title=Tags>
                         <span>Tags</span>
                     </a>
                 </li>
                 <li>
-                    <a href=/categories/ title=Categories>
+                    <a href=https://lublubxt.github.io/tec-blog/categories/ title=Categories>
                         <span>Categories</span>
                     </a>
                 </li>
@@ -77,7 +77,7 @@
         <div class=not-found>404</div>
     </main>
     <footer class=footer>
-        <span>&copy; 2021 <a href>Tec Blog</a></span>
+        <span>&copy; 2021 <a href=https://lublubxt.github.io/tec-blog/>Tec Blog</a></span>
         <span>
 Powered by
 <a href=https://gohugo.io/ rel="noopener noreferrer" target=_blank>Hugo</a> &
