--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
             </div>
             <ul id=menu>
                 <li>
-                    <a href=https://lublubxt.github.io/tec-blog/tags/ title=Tags>
+                    <a href=https://lublubxt.github.io/tec-blog/tec-blog/tags/ title=Tags>
                         <span>Tags</span>
                     </a>
                 </li>
                 <li>
-                    <a href=https://lublubxt.github.io/tec-blog/categories/ title=Categories>
+                    <a href=https://lublubxt.github.io/tec-blog/tec-blog/categories/ title=Categories>
                         <span>Categories</span>
                     </a>
                 </li>
